# speaker-diarization

./: .env.example  .gitignore  CURRENT_ISSUE.md  LICENSE  README.md  READY_TO_PUSH.md  analyze_logs.py  clear_logs.sh  debug_cosine.py  list_audio_devices.py  pyproject.toml  requirements.txt  setup.sh  setup_enhanced.sh  test_embedding_consistency.py  test_live_recording.py  test_profile_recognition.py
.github/: README.md  copilot-instructions.md
.github/chatmodes/: brainstorm.chatmode.md
docs/: CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_UPDATE_SUMMARY.md  FIX_MULTI_SPEAKER_DETECTION.md  FIX_TRANSCRIBE_ALL_DISPLAY_TARGET.md  FIX_TRANSCRIPTION_TRUNCATION.md  FIX_VAD_THRESHOLD.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PROFILE_QUALITY.md  IMPLEMENTATION_STATUS.md  MICROPHONE_FIX.md  PRE_PUSH_CHECKLIST.md  PROFILE_QUALITY.md  PROFILE_RECREATION_GUIDE.md  PROJECT_ORGANIZATION.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.txt  QUICK_FIX.md  QUICK_START.md  README.md  REALTIME_IMPROVEMENTS.md  SETUP_COMPLETE.md  TROUBLESHOOTING.md  TROUBLESHOOTING_REALTIME.md  WAVEFORM_VISUALIZATION.md
docs/analysis/: CONTINUOUS_TRANSCRIPTION_APPROACH.md
docs/architecture/: system-architecture.md
docs/fixes/: FIX_AZURE_RECOGNITION_LOOP.md  FIX_BUFFER_DURATION_FILE_CLEANUP.md  FIX_DISABLE_AUDIO_PREPROCESSING.md  FIX_MID_SENTENCE_CUTS.md  FIX_MISSING_IS_TARGET_FLAG.md  HEBREW_ACCURACY_OPTIMIZATION.md  IMPROVE_TRANSCRIPTION_QUALITY.md  README.md
docs/implementation/: PUSH_STREAM_IMPLEMENTATION.md  TRANSCRIPTION_BUFFER_IMPLEMENTATION.md
src/: TROUBLESHOOTING.md  __init__.py
src/ui/: __init__.py  (+4 more)
tests/: .gitkeep  README.md  __init__.py  conftest.py  diagnose_profile.py  list_audio_devices.py  test_diarization_service.py  test_identification_service.py  test_json_serialization.py  test_microphone.py  test_profile_manager.py  test_profile_match.py  test_profile_quality.py  verify_installation.py
(+18 files in other folders)
